# typescript-runtime

./: .gitignore  CMakeLists.txt  test.ts
include/: result.h
src/: error.c  error.h  fileio.c  fileio.h  lexer.c  lexer.h  main.c
src/lib/: error.c  logger.c  logger.h  time.c  time.h
